# ezkernel

./: README.md  README.rst  pyproject.toml
ezkernel/: __init__.py  __main__.py  cli.py  kernel_manager.py
